--- a/index.html
+++ b/index.html
@@ -5,18 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="all.css">
     <title>Ren Levingar</title>
 </head>
 <body>
+    <!-- header -->
     <header>
         <div class="mainHeader">
-            <a href="../index.html"><img class="icon" src="Images/iconPlaceholder.png"></a>
-            <a href="../About/about.html"><p>About</p></a>
-            <a href="../Resume/resume.html"><p>Resume</p></a>
-            <a href="../Projects/projects.html"><p>Projects</p></a>
+            <a href="./index.html"><img class="icon" src="Images/iconPlaceholder.png"></a>
+            <a href="./index.html"><p>Home</p></a>
+            <a href="./Resume/resume.html"><p>Resume</p></a>
+            <a href="./Projects/projects.html"><p>Projects</p></a>
         </div>
     </header>
+    
+    <br><br>
 
-    <footer></footer>
+    <!-- About -->
+    <h1 class="center">About Me</h1>
+    <div class="box">
+        <h4 class="center">16 year old coder with 5 years of coding expericene.</h4>
+        <p>My name is Ren Levingar and I have been coding since I have been in 7<sup>th</sup>grade. I know how to code in JavaScript, HTML, and CSS. I speacialize in web design but have experice with coding apps and games. I have worked on and compleated countless projects throughout my time coding. I got into coding by stumbling upon a coding class and enjoying it a ton and then it became a recurring class throughout my life.</p>
+    </div>
+
+    <br><br><hr>
+
+    <!-- Experience -->
+    <h1 class="center">Experience</h1>
+    <div class="box">
+        <div class="lang">
+            <div id="langH"></div>
+            <div id="langH2"></div>
+            <p class="langText">HTML: 76%</p>
+        </div>
+
+        <div class="lang">
+            <div id="langC"></div>
+            <div id="langC2"></div>
+            <p class="langText">CCS: 67%</p>
+        </div>
+
+        <div class="lang">
+            <div id="langJ"></div>
+            <div id="langJ2"></div>
+            <p class="langText">JavaScript: 44%</p>
+        </div>
+    </div>
+
+    <br><br>
+
+    <!-- footer -->
+    <footer>
+        <div class="mainFooter">
+            <!-- add content -->
+        </div>
+    </footer>
+
 </body>
 </html>
