Updated Home Page
Added services and resume parts onto the homepage.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header -->
     <header>
         <div class="mainHeader">
-            <a href="./index.html"><img class="icon" src="Images/iconPlaceholder.png"></a>
+            <a href="./index.html"><img class="icon" alt="Ren B. Levingar" src="Images/iconPlaceholder.png"></a>
             <a href="./index.html"><p>Home</p></a>
             <a href="./Resume/resume.html"><p>Resume</p></a>
             <a href="./Projects/projects.html"><p>Projects</p></a>
@@ -22,42 +22,75 @@
     <br><br>
 
     <!-- About -->
-    <h1 class="center">About Me</h1>
+    <h1 class="center about">About Me</h1>
     <div class="box">
-        <h4 class="center">16 year old coder with 5 years of coding expericene.</h4>
-        <p>My name is Ren Levingar and I have been coding since I have been in 7<sup>th</sup>grade. I know how to code in JavaScript, HTML, and CSS. I speacialize in web design but have experice with coding apps and games. I have worked on and compleated countless projects throughout my time coding. I got into coding by stumbling upon a coding class and enjoying it a ton and then it became a recurring class throughout my life.</p>
+        <h4 class="center">16yr student with 5 years of coding expericene.</h4>
+        <p>My name is Ren Levingar and I have been coding since I have been in 7<sup>th</sup>grade. I know how to code in JavaScript, HTML, and CSS. I speacialize in web design but have experice with coding apps and games. I have worked on and compleated countless projects throughout my time coding. I got into coding by stumbling upon a coding class and enjoying it a ton and then it became a recurring class throughout my life. I am currently a high school student who goes to West-Mec and Mountain Ridge.</p>
     </div>
 
-    <br><br><hr>
+    <br><br>
 
     <!-- Experience -->
     <h1 class="center">Experience</h1>
     <div class="box">
         <div class="lang">
-            <div id="langH"></div>
-            <div id="langH2"></div>
+            <div id="langH"><div id="langH2"></div></div>
             <p class="langText">HTML: 76%</p>
         </div>
 
         <div class="lang">
-            <div id="langC"></div>
-            <div id="langC2"></div>
+            <div id="langC"><div id="langC2"></div></div>
             <p class="langText">CCS: 67%</p>
         </div>
 
         <div class="lang">
-            <div id="langJ"></div>
-            <div id="langJ2"></div>
+            <div id="langJ"><div id="langJ2"></div></div>
             <p class="langText">JavaScript: 44%</p>
+        </div><br>
+
+        <div>
+            <p>I have also developed many other skills throughout my time coding, BSA, and FBLA including but not limited to:</p>
+            <ul>
+                <li>Leadership</li>
+                <li>Team functions</li>
+                <li>Team development</li>
+                <li>Working with clients</li>
+                <li>Utilization of SDLC</li>
+            </ul>
         </div>
     </div>
 
     <br><br>
 
+    <!-- Services -->
+    <h1 class="center">My Services</h1>
+    <div class="flexBox">
+        <div class="services">	
+            <p class="servicesTitle">Web Design</p>
+            <p class="servicesIcon">&#128421;</p>
+            <hr class="thin">
+            <p class="servicesText">Devlop high end websites to be used for stores, restraunts, portfolios, and more.</p>
+        </div>
+
+        <div class="services">	
+            <p class="servicesTitle">Game Design</p>
+            <p class="servicesIcon">&#127918;</p>
+            <hr class="thin">
+            <p class="servicesText">Devlop high end websites to be used for stores, restraunts, portfolios, and more.</p>
+        </div>
+
+        <div class="services">	
+            <p class="servicesTitle">App Design</p>
+            <p class="servicesIcon">&#128241;</p>
+            <hr class="thin">
+            <p class="servicesText">Devlop high end websites to be used for stores, restraunts, portfolios, and more.</p>
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="mainFooter">
-            <!-- add content -->
+            <p></p>
         </div>
     </footer>
 
