Media Queries - Home
Home page media queries are finished, works for every page size.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="all.css">
+    <link rel="shortcut icon" href="./Images/logoAlt.png" type="image/x-icon">
     <title>Ren Levingar</title>
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="mainHeader">
-            <a href="./index.html"><img class="icon" alt="Ren B. Levingar" src="Images/iconPlaceholder.png"></a>
+            <a href="./index.html"><div clas="iconBorder"><img class="icon" alt="Ren B. Levingar" src="./Images/icon.png"></div></a>
             <a href="./index.html"><p>Home</p></a>
-            <a href="./Resume/resume.html"><p>Resume</p></a>
+            <a href="./Contact/contact.html"><p>Contact Me</p></a>
             <a href="./Projects/projects.html"><p>Projects</p></a>
+            <a href="./index.html"><img class="icon"src="./Images/logo.png"></a>
         </div>
     </header>
+
+    <!-- titles -->
+    <h1 class="pageTitle">Ren Levingar</h1>
+    <h2 class="pageSubTitle">Youth Coder</h2>
     
     <br><br>
 
@@ -62,6 +68,37 @@
 
     <br><br>
 
+    <!-- Resume -->
+    <h1 class="center">Resume</h1>
+    <div class="resume">
+        <h4 class="center">Personal Objective</h4>
+        <p>Looking for an entry-level job that incorporates my web design skills. Hoping to provide clients with the exact web formats, styles, and functioning that they may desire. </p><br>
+
+        <h4 class="center">Skills and Certifications</h4>
+        <ul>
+            <li>Ability to develop program requirements/specifications and a testing plan (e.g. user stories, automated testing, test procedures)</li>
+            <li>Ability to explain and interact with an Application Interface</li>
+            <li>Able to develop objects or assemblies via Autodesk Inventor when given a blueprint.</li>
+            <li>Skilled in identifying errors in program modules</li>
+            <li>Experience with creating and implementing basic algorithms</li>
+        </ul><br>
+
+        <h4 class="center">Education</h4>
+        <h5>West-Mec Coding</h5>
+        <p>This two-year interactive program prepares students for a career as a software developer. The program teaches students how to design and develop software, build apps for phones, tablets, websites, and write and test computer code. </p><br>
+        <h5>Mountain Ridge</h5>
+        <p>Mountain Ridge is an A+ highschool in the Deer Valley Unified Schiool District in Glendale Arizona. This is the best school in its distct for coding, it is the only school that offers AP Coding.</p><br>
+
+        <h4 class="center">Extracurricular Activities</h4>
+        <ul>
+            <li>BSA: Member since 2013, assisted in setting up campouts, attended campouts, assisted insetting up service projects, attended service projects, help young scouts, knots, leadership, color guard</li>
+            <li>FBLA: Member since 2022, class president, went to FLEX 2022</li>
+            <li>Track and Field: Member from 2020-2022, throwing sports, practiced 5 days a week</li>
+        </ul>
+    </div>
+
+    <br><br>
+
     <!-- Services -->
     <h1 class="center">My Services</h1>
     <div class="flexBox">
@@ -76,21 +113,32 @@
             <p class="servicesTitle">Game Design</p>
             <p class="servicesIcon">&#127918;</p>
             <hr class="thin">
-            <p class="servicesText">Devlop high end websites to be used for stores, restraunts, portfolios, and more.</p>
+            <p class="servicesText">Devlop high games to be used for a variety of platforms. A large varity of games could be made.</p>
         </div>
 
         <div class="services">	
             <p class="servicesTitle">App Design</p>
             <p class="servicesIcon">&#128241;</p>
             <hr class="thin">
-            <p class="servicesText">Devlop high end websites to be used for stores, restraunts, portfolios, and more.</p>
+            <p class="servicesText">Devlop high end apps for easy download and use on any device with high functionality.</p>
         </div>
     </div>
+
+    <br><br>
 
     <!-- footer -->
     <footer>
         <div class="mainFooter">
-            <p></p>
+            <a href="./Projects/projects.html">Projects</a>
+            <a href="./Contact/contact.html">Contact Me</a>
+
+            <div>
+                <h5 class="infoTitle">My Info:</h5>
+                <p class="info">Name: Ren Levingar</p>
+                <p class="info">Email: ren@gmail.com</p>
+                <p class="info">Phone: 555-555-5555</p>
+                <p class="info">Address: 1234 N. John Dr.</p>
+            </div>
         </div>
     </footer>
 
