--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../all.css">
-    <link rel="stylesheet" href="resume.css">
-    <title>Ren - Resume</title>
+    <link rel="stylesheet" href="projects.css">
+    <title>Ren - Projects</title>
 </head>
 <body>
-     <!-- header -->
-     <header>
+    <!-- header -->
+    <header>
         <div class="mainHeader">
-            <a href="../index.html"><img class="icon" alt="Ren B. Levingar" src="./Images/iconPlaceholder.png"></a>
+            <a href="../index.html"><img class="icon" alt="Ren B. Levingar" src="Images/iconPlaceholder.png"></a>
             <a href="../index.html"><p>Home</p></a>
-            <a href="../Resume/resume.html"><p>Resume</p></a>
+            <a href="../Contact/contact.html"><p>Contact Me</p></a>
             <a href="../Projects/projects.html"><p>Projects</p></a>
         </div>
     </header>
+
+    <!-- Projects -->
+    <div class="prjects">
+        <div class="projectBox">
+            
+        </div>
+    </div>
 </body>
 </html>
