--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -8,24 +8,53 @@
     <link rel="shortcut icon" href="../Images/logoAlt.png" type="image/x-icon">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="../all.css">
+    <link rel="shortcut icon" href="../Images/logoAlt.png" type="image/x-icon">
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="mainHeader">
-            <a href="../index.html"><img class="icon" alt="Ren B. Levingar" src="Images/iconPlaceholder.png"></a>
+            <a href="../index.html"><img class="icon" alt="Ren B. Levingar" src="../Images/icon.png"></a>
             <a href="../index.html"><p>Home</p></a>
-            <a href="./Contact/contact.html"><p>Contact Me</p></a>
+            <a href="../Contact/contact.html"><p>Contact Me</p></a>
             <a href="../Projects/projects.html"><p>Projects</p></a>
             <a href="../index.html"><img class="icon"src="../Images/logo.png"></a>
         </div>
     </header>
 
-    <!-- email contact -->
-    <div class="mainContact">
-        <div class="contacterInfo"><input class="person" type="text" placeholder="Name"><input class="email" type="text" placeholder="Email"></div>
-        <input class="subject" type="text" placeholder="Subject">
-        <input class="message" type="text" placeholder="Message">
+    <!-- emails -->
+    <div class="emails">
+        <div class="emailContact">
+            <textarea placeholder="Name" class="email1"></textarea>
+            <textarea placeholder="Email" class="email1"></textarea>
+        </div>
+
+        <textarea placeholder="Subject" class="email2"></textarea>
+        <textarea placeholder="Message" id="email3" onclick="messageBTN()"></textarea>
+
+        <button type="submit" class="sendBTN">Send</button>
+    </div>
+
+    <br><br><br><br>
+
+    <!-- other contacts -->
+    <div class="contacts">
+
+        <div class="contactBox">
+            <a href="https://www.instagram.com"><img class="mediaIcons" src="../Images/instagram.jpg"></a>
+            <p>@renLevingar</p>
+        </div>
+
+        <div class="contactBox">
+            <a href="https://www.instagram.com"><img class="mediaIcons" src="../Images/facebook.jpg"></a>
+            <p>coderRen</p>
+        </div>
+
+        <div class="contactBox">
+            <a href="https://twitter.com/"><img class="mediaIcons" src="../Images/twitter.jpg"></a>
+            <p>youthCoderRen</p>
+        </div>
+
     </div>
 
     <br><br>
@@ -45,5 +74,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="contact.js"></script>
+
 </body>
 </html>
