--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -21,16 +21,30 @@
         </div>
     </header>
 
-    <br><br>
-
     <!-- projects -->
-    <div>
-        <!-- FBLA website -->
-        <!-- rock paper scissors -->
-        <!-- tic tac toe -->
-        <!-- east-mec -->
-        <!-- calculator -->
-        <!-- tr 747 -->
+    <div class="projects">
+
+        <div class="projectRow">
+            <!-- FBLA website DONE-->
+            <div class="projectBox webFBLA"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div>
+            <!-- rock paper scissors DONE-->
+            <div class="projectBox webRPS"><p class="RPS">Rock, paper, scissors against the computer.</p></div>
+        </div>
+
+        <div class="projectRow">
+            <!-- tic tac toe -->
+            <div class="projectBox webTTT"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div>
+            <!-- east-mec DONE-->
+            <div class="projectBox webEastMEC"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div>
+        </div>
+
+        <div class="projectRow">
+            <!-- calculator DONE(may have issues)-->
+            <div class="projectBox webCalc"><p class="calc">A calculator for any basic equation.</p></div>
+            <!-- tr 747 -->
+            <div class="projectBox web747"><p class="troop">BSA Troop 747 unfinished website.</p></div>
+        </div>
+
     </div>
 
     <!-- footer -->
