--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -25,24 +25,24 @@
     <div class="projects">
 
         <div class="projectRow">
-            <!-- FBLA website DONE-->
-            <div class="projectBox webFBLA"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div>
-            <!-- rock paper scissors DONE-->
-            <div class="projectBox webRPS"><p class="RPS">Rock, paper, scissors against the computer.</p></div>
+            <!-- FBLA website -->
+            <a href="../../FBLA-Website_Project-V2/index.html"><div class="projectBox webFBLA FBLABG"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div></a>
+            <!-- rock paper scissors -->
+            <a href="../../Rock-Paper-Scissors/index.html"><div class="projectBox webRPS RPSBG"><p class="RPS">Rock, paper, scissors against the computer.</p></div></a>
         </div>
 
         <div class="projectRow">
             <!-- tic tac toe -->
-            <div class="projectBox webTTT"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div>
-            <!-- east-mec DONE-->
-            <div class="projectBox webEastMEC"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div>
+            <a href="../../TicTacToe/index.html"><div class="projectBox webTTT TTTBG"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div></a>
+            <!-- east-mec -->
+            <a href="../../eastmec/index.html"><div class="projectBox webEastMEC eastBG"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div></a>
         </div>
 
         <div class="projectRow">
-            <!-- calculator DONE(may have issues)-->
-            <div class="projectBox webCalc"><p class="calc">A calculator for any basic equation.</p></div>
+            <!-- calculator -->
+            <a href="../../Calculator/index.html"><div class="projectBox webCalc calcBG"><p class="calc">A calculator for any basic equation.</p></div></a>
             <!-- tr 747 -->
-            <div class="projectBox web747"><p class="troop">BSA Troop 747 unfinished website.</p></div>
+            <a href="../../Tr747/index.html"><div class="projectBox web747 trBG"><p class="troop">BSA Troop 747 unfinished website.</p></div></a>
         </div>
 
     </div>
