--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="all.css">
     <link rel="shortcut icon" href="./Images/logoAlt.png" type="image/x-icon">
+    <link rel="stylesheet" href="./Projects/projects.css">
+    <link rel="stylesheet" href="./Contact/contact.css">
     <title>Ren Levingar</title>
 </head>
 <body>
@@ -15,8 +17,8 @@
         <div class="mainHeader">
             <a href="./index.html"><div clas="iconBorder"><img class="icon" alt="Ren B. Levingar" src="./Images/icon.png"></div></a>
             <a href="./index.html"><p>Home</p></a>
-            <a href="./Contact/contact.html"><p>Contact Me</p></a>
             <a href="./Projects/projects.html"><p>Projects</p></a>
+            <a href="./Contact/contact.html"><p>Contact Me</p></a>
             <a href="./index.html"><img class="icon"src="./Images/logo.png"></a>
         </div>
     </header>
@@ -99,6 +101,35 @@
 
     <br><br>
 
+    <!-- projects -->
+    <h1 class="center">Projects</h1>
+    <div class="projects">
+
+        <div class="projectRow">
+            <!-- FBLA website -->
+            <a href="../../FBLA-Website_Project-V2/index.html"><div class="projectBox webFBLA FBLABG"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div></a>
+            <!-- rock paper scissors -->
+            <a href="../../Rock-Paper-Scissors/index.html"><div class="projectBox webRPS RPSBG"><p class="RPS">Rock, paper, scissors against the computer.</p></div></a>
+        </div>
+
+        <div class="projectRow">
+            <!-- tic tac toe -->
+            <a href="../../TicTacToe/index.html"><div class="projectBox webTTT TTTBG"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div></a>
+            <!-- east-mec -->
+            <a href="../../eastmec/index.html"><div class="projectBox webEastMEC eastBG"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div></a>
+        </div>
+
+        <div class="projectRow">
+            <!-- calculator -->
+            <a href="../../Calculator/index.html"><div class="projectBox webCalc calcBG"><p class="calc">A calculator for any basic equation.</p></div></a>
+            <!-- tr 747 -->
+            <a href="../../Tr747/index.html"><div class="projectBox web747 trBG"><p class="troop">BSA Troop 747 unfinished website.</p></div></a>
+        </div>
+
+    </div>
+
+    <br><br>
+
     <!-- Services -->
     <h1 class="center">My Services</h1>
     <div class="flexBox">
@@ -122,6 +153,44 @@
             <hr class="thin">
             <p class="servicesText">Devlop high end apps for easy download and use on any device with high functionality.</p>
         </div>
+    </div>
+
+    <br><br>
+
+    <!-- contact me -->
+    <h1 class="center">Contact Me</h1>
+    <div class="emails">
+        <div class="emailContact">
+            <textarea placeholder="Name" class="email1"></textarea>
+            <textarea placeholder="Email" class="email1"></textarea>
+        </div>
+
+        <textarea placeholder="Subject" class="email2"></textarea>
+        <textarea placeholder="Message" id="email3" onclick="messageBTN()"></textarea>
+
+        <button type="submit" class="sendBTN">Send</button>
+    </div>
+
+    <br><br><br><br>
+
+    <!-- other contacts -->
+    <div class="contacts">
+
+        <div class="contactBox">
+            <a href="https://www.instagram.com"><img class="mediaIcons" src="./Images/instagram.jpg"></a>
+            <p>@renLevingar</p>
+        </div>
+
+        <div class="contactBox">
+            <a href="https://www.instagram.com"><img class="mediaIcons" src="./Images/facebook.jpg"></a>
+            <p>coderRen</p>
+        </div>
+
+        <div class="contactBox">
+            <a href="https://twitter.com/"><img class="mediaIcons" src="./Images/twitter.jpg"></a>
+            <p>youthCoderRen</p>
+        </div>
+
     </div>
 
     <br><br>
