--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <header>
         <div class="mainHeader">
             <a href="./index.html"><div clas="iconBorder"><img class="icon" alt="Ren B. Levingar" src="./Images/icon.png"></div></a>
-            <a href="./index.html"><p>Home</p></a>
-            <a href="./Projects/projects.html"><p>Projects</p></a>
-            <a href="./Contact/contact.html"><p>Contact Me</p></a>
+            <a href="#about"><p>About Me</p></a>
+            <a href="#exp"><p>Experience</p></a>
+            <a href="#resume"><p>Resume</p></a>
+            <a href="#projects"><p>Projects</p></a>
+            <a href="#services"><p>Services</p></a>
+            <a href="#contact"><p>Contact Me</p></a>
             <a href="./index.html"><img class="icon"src="./Images/logo.png"></a>
         </div>
     </header>
@@ -30,7 +33,7 @@
     <br><br>
 
     <!-- About -->
-    <h1 class="center about">About Me</h1>
+    <h1 class="center about" id="about">About Me</h1>
     <div class="box">
         <h4 class="center">16yr student with 5 years of coding expericene.</h4>
         <p>My name is Ren Levingar and I have been coding since I have been in 7<sup>th</sup>grade. I know how to code in JavaScript, HTML, and CSS. I speacialize in web design but have experice with coding apps and games. I have worked on and compleated countless projects throughout my time coding. I got into coding by stumbling upon a coding class and enjoying it a ton and then it became a recurring class throughout my life. I am currently a high school student who goes to West-Mec and Mountain Ridge.</p>
@@ -39,7 +42,7 @@
     <br><br>
 
     <!-- Experience -->
-    <h1 class="center">Experience</h1>
+    <h1 class="center" id="exp">Experience</h1>
     <div class="box">
         <div class="lang">
             <div id="langH"><div id="langH2"></div></div>
@@ -71,7 +74,7 @@
     <br><br>
 
     <!-- Resume -->
-    <h1 class="center">Resume</h1>
+    <h1 class="center" id="resume">Resume</h1>
     <div class="resume">
         <h4 class="center">Personal Objective</h4>
         <p>Looking for an entry-level job that incorporates my web design skills. Hoping to provide clients with the exact web formats, styles, and functioning that they may desire. </p><br>
@@ -102,7 +105,7 @@
     <br><br>
 
     <!-- projects -->
-    <h1 class="center">Projects</h1>
+    <h1 class="center" id="projects">Projects</h1>
     <div class="projects">
 
         <div class="projectRow">
@@ -131,7 +134,7 @@
     <br><br>
 
     <!-- Services -->
-    <h1 class="center">My Services</h1>
+    <h1 class="center" id="services">My Services</h1>
     <div class="flexBox">
         <div class="services">	
             <p class="servicesTitle">Web Design</p>
@@ -158,7 +161,7 @@
     <br><br>
 
     <!-- contact me -->
-    <h1 class="center">Contact Me</h1>
+    <h1 class="center"  id="contact">Contact Me</h1>
     <div class="emails">
         <div class="emailContact">
             <textarea placeholder="Name" class="email1"></textarea>
