--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header id="top">
         <div class="mainHeader">
             <a href="./index.html"><div clas="iconBorder"><img class="icon" alt="Ren B. Levingar" src="./Images/icon.png"></div></a>
             <a href="#about"><p>About Me</p></a>
@@ -201,8 +201,15 @@
     <!-- footer -->
     <footer>
         <div class="mainFooter">
-            <a href="./Projects/projects.html">Projects</a>
-            <a href="./Contact/contact.html">Contact Me</a>
+            <div>
+                <p class="info center">The best time to contact me for a quick <br>response is from 7:00pm to 10:00pm.</p>
+            </div>
+
+            <div>
+                <p class="info center">Image Credits: Wallpaper Flare</p>
+            </div>
+
+            <a href="#top">Back to Top</a>
 
             <div>
                 <h5 class="infoTitle">My Info:</h5>
@@ -214,7 +221,7 @@
         </div>
     </footer>
 
-    <script src="./Contact/contact.js"></script>
+    <script src="all.js"></script>
 
 </body>
 </html>
