--- a/index.html
+++ b/index.html
@@ -106,27 +106,28 @@
 
     <!-- projects -->
     <h1 class="center" id="projects">Projects</h1>
+    <h4 class="center">Click on any of the below items to view my GitHub pages of the projects</h4>
     <div class="projects">
 
         <div class="projectRow">
             <!-- FBLA website -->
-            <a href="../../FBLA-Website_Project-V2/index.html"><div class="projectBox webFBLA FBLABG"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div></a>
+            <a href="https://ethantransier.github.io/FBLA-Website_Project-V2/"><div class="projectBox webFBLA FBLABG"><p class="FBLA">Chinese Restraunt website made for FBLA web design competition in a team of 3.</p></div></a>
             <!-- rock paper scissors -->
-            <a href="../../Rock-Paper-Scissors/index.html"><div class="projectBox webRPS RPSBG"><p class="RPS">Rock, paper, scissors against the computer.</p></div></a>
+            <a href="https://renlevingar.github.io/Rock-Paper-Scissors/"><div class="projectBox webRPS RPSBG"><p class="RPS">Rock, paper, scissors against the computer.</p></div></a>
         </div>
 
         <div class="projectRow">
             <!-- tic tac toe -->
-            <a href="../../TicTacToe/index.html"><div class="projectBox webTTT TTTBG"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div></a>
+            <a href="https://renlevingar.github.io/TicTacToe/"><div class="projectBox webTTT TTTBG"><p class="TTT">Tic-Tac-Toe against another player. Each player alternates what they are every turn.</p></div></a>
             <!-- east-mec -->
-            <a href="../../eastmec/index.html"><div class="projectBox webEastMEC eastBG"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div></a>
+            <a href="https://dearborn42.github.io/eastmec/"><div class="projectBox webEastMEC eastBG"><p class="eastMEC">East-MEC, a website that is supposed to be a joke version of West-MEC.</p></div></a>
         </div>
 
         <div class="projectRow">
             <!-- calculator -->
-            <a href="../../Calculator/index.html"><div class="projectBox webCalc calcBG"><p class="calc">A calculator for any basic equation.</p></div></a>
+            <a href="https://renlevingar.github.io/Calculator/"><div class="projectBox webCalc calcBG"><p class="calc">A calculator for any basic equation.</p></div></a>
             <!-- tr 747 -->
-            <a href="../../Tr747/index.html"><div class="projectBox web747 trBG"><p class="troop">BSA Troop 747 unfinished website.</p></div></a>
+            <a href="https://renlevingar.github.io/Tr747/"><div class="projectBox web747 trBG"><p class="troop">BSA Troop 747 unfinished website.</p></div></a>
         </div>
 
     </div>
@@ -208,8 +209,6 @@
             <div>
                 <p class="info center">Image Credits: Wallpaper Flare</p>
             </div>
-
-            <a href="#top">Back to Top</a>
 
             <div>
                 <h5 class="infoTitle">My Info:</h5>
